--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "clsx": "^2.1.1",
     "firebase": "^12.8.0",
     "lucide-react": "^0.562.0",
-    "motion": "^12.29.0",
+    "motion": "^12.33.0",
     "next": "16.1.4",
+    "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "sharp": "^0.34.5",
