--- a/public/manifest-admin.json
+++ b/public/manifest-admin.json
@@ -5,8 +5,8 @@
     "start_url": "/admin",
     "scope": "/admin",
     "display": "standalone",
-    "background_color": "#f1f5f9",
-    "theme_color": "#334155",
+    "background_color": "#0B1120",
+    "theme_color": "#0B1120",
     "orientation": "portrait-primary",
     "categories": ["business", "productivity"],
     "lang": "en-US",
