--- a/public/manifest-client.json
+++ b/public/manifest-client.json
@@ -6,7 +6,7 @@
     "scope": "/",
     "display": "standalone",
     "background_color": "#0B1120",
-    "theme_color": "#1e293b",
+    "theme_color": "#0B1120",
     "orientation": "portrait-primary",
     "categories": ["business", "lifestyle"],
     "lang": "en-US",
